@@ -1,10 +1,9 @@
-# TODO: Remove this file and adjust StatusWidget once support TYPO3 v11 is dropped (configuration is moved to Configuration/page.tsconfig)
+# TODO: Remove this file once support TYPO3 v11 is dropped (configuration is moved to Configuration/page.tsconfig)
 # https://docs.typo3.org/c/typo3/cms-core/main/en-us/Changelog/12.0/Breaking-96812-NoFrontendTypoScriptBasedTemplateOverridesInTheBackend.html
 module.tx_dashboard {
   view {
     templateRootPaths {
       1613733292 = EXT:ke_search/Resources/Private/Dashboard/Templates/
-      1613733293 = {$plugin.tx_kesearch.templateRootPath}
     }
   }
 }
